<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameLayoutActivity">

    <ImageView
        android:id="@+id/ivAndroidLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/android_logo" />

    <TextView
        android:id="@+id/tvAndroidText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/hello_android"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etComments"
        android:layout_marginTop="50dp"
        android:textColor="#000000"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:hint="@string/your_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:padding="10dp"
        android:layout_gravity="bottom|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</FrameLayout>